--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <meta property="og:description" content="BBM Annex Learning Platform for Notes and Past Papers" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bbm.giftedtech.co.ke/" />
-    <meta property="og:image" content="/android-chrome-512x512.png" />
+    <meta property="og:image" content="https://bbm.giftedtech.co.ke/android-chrome-512x512.png" />
     <meta property="og:site_name" content="BBM Annex" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@GiftedMauriceKe" />
-    <meta name="twitter:image" content="/android-chrome-512x512.png" />
+    <meta name="twitter:image" content="https://bbm.giftedtech.co.ke/android-chrome-512x512.png" />
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#16a34a" />
